Fixed bug to account for descriptions not showing the show more collapsible div.

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ h3 {
   width: 96%;
 }
 
+#harderDeactivateText {
+  font-size: 13px;
+}
+
 #rangeSlider{
   margin-top: 10px;
   margin: 15px;
